# events

./: .gitignore  AUDIT.md  AUDIT_V4_SUMMARY.md  Anchor.toml  BUILD_PLAN.md  BUILD_PLAN_V4.md  Cargo.toml  README.md  RENT_OPTIMIZATION_V5.md  SINGLE_SIDE_MODE.md  TEST_STATUS_V5.md  package.json  tsconfig.json
programs/market_engine/: Cargo.toml
programs/market_engine/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/market_engine/src/instructions/: mod.rs
programs/market_engine/src/instructions/admin/: initialize.rs  initialize_market.rs  mod.rs  pause.rs  set_treasury.rs  set_worker.rs  upsert_template.rs
programs/market_engine/src/instructions/market/: cancel_epoch.rs  claim.rs  deposit_to_side.rs  lock_epoch.rs  mod.rs  open_epoch.rs  resolve_epoch.rs  switch_side.rs  withdraw_fees.rs
programs/market_engine/src/math/: mod.rs  payout.rs  reserves.rs  switching.rs
programs/market_engine/src/oracle/: pyth.rs
programs/market_engine/src/resolvers/: direction.rs  mod.rs  range_close.rs  threshold.rs
programs/market_engine/src/state/: config.rs  epoch.rs  ledger.rs  mod.rs  position.rs  template.rs  types.rs  vaults.rs
programs/market_engine/tests/: README.md  invariant_regressions.rs
tests/: README.md  failure_cases.ts  fees_and_claims.ts  market_lifecycle.cjs  market_lifecycle.ts  pyth_confidence_flow.cjs  pyth_confidence_flow.ts  pyth_direction_flow.ts  pyth_stale_flow.cjs  pyth_stale_flow.ts  pyth_threshold_flow.ts  single_side_mode.ts
tests/helpers/: marketEngine.ts  pyth.ts
