[package]
name = "market_engine"
version = "0.1.0"
description = "RetroPick persistent-vault rolling-epoch market engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "=1.0.1"
